# bssync

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  README.md  bookstack.yaml.example  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: BACKLOG.md
dxt/: manifest.json.template
src/bssync/: __init__.py  __main__.py  _mcp_entry.py  cli.py  client.py  completions.py  config.py  conflict.py  content.py  discovery.py  init.py  mcp_install.py  mcp_server.py  sync.py  term.py
src/bssync/mcp/: __init__.py  helpers.py  prompts.py  resources.py  server.py
src/bssync/mcp/tools/: live_read.py  live_write.py  sync.py
tests/: test_config.py  test_content.py  test_discovery.py  test_mcp.py  test_mcp_install.py  test_sync.py
